fix settings' add input overlapping navbar options

--- a/index.css
+++ b/index.css
@@ -242,6 +242,7 @@ nav {
   top: 0;
   background: var(--background);
   padding-top: calc(0.5rem + env(safe-area-inset-top));
+  z-index: 2;
 }
 
 nav .left-half,
